# dealscope

./: .gitignore  .posthog-events.json  .vercelignore  AGENTS.md  BRAND_CONTENT_TEMPLATE.md  CURSOR_BUILD_INSTRUCTIONS.md  DEALGAPIQ_OVERVIEW.md  DEPLOY.md  DealGapIQ-Feature-Audit-v2.md  FIX_REAL_DATA.md  GEO-AUDIT-REPORT.md  GEO-IMPLEMENTATION-NOTES.md  GEO-REMEDIATION-PLAN.md  GEO-TECHNICAL-AUDIT.md  HOMEPAGE_MARKETING_PLAN.md  IAP-SETUP-INSTRUCTIONS.md  ISSUE_RESOLUTION_SUMMARY.md  InvestIQ_Metrics_Glossary.xlsx  MARKETING-AUDIT.md  MARKETING-REPORT.md  Mobile-Gap-Analysis.md  PARITY_REPORT.md  PRODUCTION_READINESS_AUDIT.md  PROPERTY-ANALYSIS-3788-Moon-Bay-Cir.md  PROPERTY-COMPS-3788-Moon-Bay-Cir.md  PROPERTY-INVEST-3788-Moon-Bay-Cir.md  PROPERTY-MARKET-Wellington-FL-33414.md  PROPERTY-NEIGHBORHOOD-3788-Moon-Bay-Cir.md  PROPERTY-RENTAL-3788-Moon-Bay-Cir.md  PROPERTY_SEARCH_TEST_RESULTS.md  README.md  SEARCH_FIX_SUMMARY.md  SEO-AUDIT.md  START_BACKEND_FOR_REAL_DATA.md  TEST_PROPERTY_SEARCH.md  THREE_PATHS_PLAN.md  WIKIPEDIA-DRAFT-brad-geisen.md  default_assumptions.csv  docker-compose.yml  package-lock.json  (+5 more)
backend/: .deploy-trigger  .env  .env.example  DEALGAPIQ_API_INTEGRATION_GUIDE.md  Dockerfile  INVESTIQ_API_INTEGRATION_GUIDE.md  InvestIQ_953_Banyan_Dr_20251219_205123.xlsx  Procfile  Property_Data_3788_Moon_Bay_Cir_Wellington_FL_33414_20260221_1712.xlsx  Property_Data_AXESSO_3788_Moon_Bay_Cir_Wellington_FL_33414_20260221_1741.xlsx  Property_Data_AXESSO_3788_Moon_Bay_Cir_Wellington_FL_33414_20260221_1747.xlsx  Property_Data_RentCast_3788_Moon_Bay_Cir_Wellington_FL_33414_20260221_1741.xlsx  Property_Data_RentCast_3788_Moon_Bay_Cir_Wellington_FL_33414_20260221_1747.xlsx  Property_Data_Report.xlsx  alembic.ini  axesso_953_banyan_dr_20251219_145626.csv  axesso_953_banyan_dr_20251219_145626.txt  comparison_rentcast_vs_axesso_20251219_150442.csv  create_comparison_spreadsheet.py  env.template  export_to_excel.py  fix_alembic.py  investiq_property_data_20251219_170654.json  investiq_property_report_20251219_170654.csv  migrate_database.py  nixpacks.toml  pyproject.toml  pyrightconfig.json  pytest.ini  railway.toml  rentcast_953_banyan_dr_20251219_145626.csv  rentcast_953_banyan_dr_20251219_145626.txt  requirements.txt  settings.py  start.py  test_axesso_market_data.py  test_minimal.py  test_property_v2_fields.py  test_unified_service.py  urls.py  (+1 more)
backend/alembic/: README  env.py  script.py.mako
backend/app/: __init__.py  main.py  schemas.py
backend/config/: __init__.py  settings.py  urls.py  wsgi.py
backend/docs/: LANDLORD_INSURANCE_DEPLOY.md  README.md  RUNBOOK.md
backend/scripts/: backup.sh  debug_redfin.py  (+10 more)
(+1987 files in other folders)
